// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`form - PhoneInputField > should be disabled when disabled prop is true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
          for="phone-_r_o_"
        >
          Phone Number
        </label>
        <div
          class="uv_f9zn1x4 uv_f9zn1x1"
          data-disabled="true"
          data-error="false"
        >
          <div
            class="uv_f9zn1x0 uv_toi52u0 uv_toi52ud uv_toi52u2d"
            data-disabled="true"
          >
            🇫🇷
          </div>
          <input
            aria-invalid="false"
            class="uv_f9zn1x5"
            data-size="large"
            disabled=""
            id="phone-_r_o_"
            maxlength="20"
            name="phone"
            placeholder="+33 6 12 34 56 78"
            type="tel"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`form - PhoneInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
          for="phone-_r_0_"
        >
          Phone Number
        </label>
        <div
          class="uv_f9zn1x4 uv_f9zn1x1"
          data-disabled="false"
          data-error="false"
        >
          <div
            class="uv_f9zn1x0 uv_toi52u0 uv_toi52ud uv_toi52u2d"
            data-disabled="false"
          >
            🇫🇷
          </div>
          <input
            aria-invalid="false"
            class="uv_f9zn1x5"
            data-size="large"
            id="phone-_r_0_"
            maxlength="20"
            name="phone"
            placeholder="+33 6 12 34 56 78"
            type="tel"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`form - PhoneInputField > should work with default country 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
          for="phone-_r_b_"
        >
          Phone Number
        </label>
        <div
          class="uv_f9zn1x4 uv_f9zn1x1"
          data-disabled="false"
          data-error="false"
        >
          <div
            class="uv_f9zn1x0 uv_toi52u0 uv_toi52ud uv_toi52u2d"
            data-disabled="false"
          >
            🇺🇸
          </div>
          <input
            aria-invalid="false"
            class="uv_f9zn1x5"
            data-size="large"
            id="phone-_r_b_"
            maxlength="20"
            name="phone"
            placeholder="+1 201-555-0123"
            type="tel"
            value="+1 202-555-1234"
          />
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
